--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}} 
+        <p>Ta strona zostałą stworzona przez Ireneusza Winnika. <br> Wykorzystuje dane z mapbox.com i darksky.net.</p>
         <img class='portrait' src="/img/snail.jpg"></img>
     </div>
     {{>footer}}
